fix timeline alignment
at least tried

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -37,7 +37,7 @@
   position: absolute;
   top: 18px;
   left: 50%;
-  margin-left: -25px;
+  margin-left: -10px;
   background-color: #7c7c7c;
   border: 3px solid #ffffff;
   z-index: 100;
@@ -137,8 +137,8 @@
   width: 20%;
   min-width: 320px;
   float: none !important;
-  padding-left: 0px;
-  padding-right: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin: 0 auto;
   vertical-align: bottom;
 }
